--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  padding: 0;
+  background-color: black;
+  color: white;
   font-family: Arial, sans-serif;
 }
